Log coloring (first)

--- a/mobile/html/scenariolog.html
+++ b/mobile/html/scenariolog.html
@@ -13,6 +13,6 @@
     </div>
 </div>
 
-<pre id='pre_globallog' style="height: calc(100% - 120px)"></pre>
+<pre id='pre_scenariolog' style="height: calc(100% - 120px)"></pre>
 
 <script src="core/php/getJS.php?file=mobile/js/scenariolog.js"></script>
