Total sliders remake - All sliders now use nouislider lib (touch support)

--- a/mobile/html/index.html
+++ b/mobile/html/index.html
@@ -15,8 +15,10 @@
   <link rel="stylesheet" href="3rdparty/jquery.mobile/css/fonts.css">
   <link rel="stylesheet" href="3rdparty/roboto/roboto.css">
   <link rel="stylesheet" href="3rdparty/camingocode/camingocode.css">
+  <link rel="stylesheet" href="3rdparty/nouislider/nouislider.css">
   <script src="core/php/getJS.php?file=3rdparty/jquery/jquery.min.js"></script>
   <script src="core/php/getJS.php?file=3rdparty/jquery.mobile/jquery.mobile.min.js"></script>
+  <script src="core/php/getJS.php?file=3rdparty/nouislider/nouislider.js"></script>
   <script src="core/php/getJS.php?file=3rdparty/highstock/highstock.js"></script>
   <script src="core/php/getJS.php?file=3rdparty/highstock/highcharts-more.js"></script>
   <script src="core/php/getJS.php?file=3rdparty/highstock/modules/solid-gauge.js"></script>
