Fade my background!

--- a/mobile/html/index.html
+++ b/mobile/html/index.html
@@ -54,7 +54,10 @@
   <link rel="stylesheet" href="core/themes/core2019_Light/mobile/core2019_Light.css" id="jQMnDColor" />
 </head>
 <body data-page="home">
-  <div id="backgroundforJeedom"> </div>
+  <div id="backgroundforJeedom">
+    <div id="top" style="display:none;"></div>
+    <div id="bottom"></div>
+  </div>
   <div id="div_alert"></div>
   <div data-role="page" id="pagecontainer">
     <div id="bottompanel" data-role="panel" class="ui-bottom-sheet ui-bottom-sheet-list" data-animate="true" data-position='bottom' data-display="overlay"></div>
