Res jeedomUtils mobile and fixs

--- a/mobile/html/connection.html
+++ b/mobile/html/connection.html
@@ -45,7 +45,7 @@
         if ($('#cb_storeConnection').value() == 1) {
           localStorage.setItem("deviceKey", data.deviceKey);
         }
-        initApplication();
+        jeedomUtils.initApplication();
       }
     });
   });
