fix mobile connection

--- a/mobile/html/connection.html
+++ b/mobile/html/connection.html
@@ -17,21 +17,6 @@
   if(isset(jeedom.theme) && isset(jeedom.theme.product_image)){
     $('#img_loginImg').attr('src',jeedom.theme.product_image);
   }
-  $('#in_login_username').on('focusout change keypress',function(){
-    jeedom.user.useTwoFactorAuthentification({
-      login: $('#in_login_username').value(),
-      error: function (error) {
-        $('#div_alert').showAlert({message: error.message, level: 'danger'});
-      },
-      success: function (data) {
-        if(data == 1){
-          $('#div_twoFactorCode').show();
-        }else{
-          $('#div_twoFactorCode').hide();
-        }
-      }
-    });
-  });
   $('#bt_login_validate').on('click', function() {
     jeedom.user.login({
       username: $('#in_login_username').val(),
@@ -39,6 +24,10 @@
       twoFactorCode: $('#in_twoFactorCode').val(),
       storeConnection: $('#cb_storeConnection').value(),
       error: function (error) {
+        if(error.code == -32012){
+          $('#div_twoFactorCode').show()
+          return
+        }
         $('#div_alert').showAlert({message: error.message, level: 'danger'});
       },
       success: function (data) {
