bigger mobile summaries

--- a/mobile/html/index.html
+++ b/mobile/html/index.html
@@ -83,7 +83,7 @@
       
     </div>
     
-    <div role="main" class="ui-content" id="page" data-inset="false" style="padding : 2px;padding-top : 4px;"></div>
+    <div role="main" class="ui-content" id="page" data-inset="false" style="padding: 12px 2px 2px;"></div>
     <div data-role="popup" id="popupDialog" style="width : 100%">
       <div data-role="header">
         <h1 class='nd-title'></h1>
