--- a/mobile/html/equipment.html
+++ b/mobile/html/equipment.html
@@ -1,3 +1,3 @@
 <br/><br/>
-<div id="div_displayEquipement" style="height: 100%;"></div>
+<div id="div_displayEquipement"></div>
 <script src="core/php/getJS.php?file=mobile/js/equipment.js"></script>
