--- a/mobile/html/overview.html
+++ b/mobile/html/overview.html
@@ -1,7 +1,3 @@
-<div class="col-lg-12">
-  <div id="objectOverviewContainer">
-
-  </div>
-</div>
+<div id="objectOverviewContainer"></div>
 
 <script src="core/php/getJS.php?file=mobile/js/overview.js"></script>
