mobile nb msg synch

--- a/mobile/html/index.html
+++ b/mobile/html/index.html
@@ -72,6 +72,7 @@
         <span class="objectSummaryglobal" data-version="mobile"></span>
       </div>
       
+      <span id="span_nbMessage" class="span_nbMessage cursor label-warning badge" style="display:none;"></span>
       <a href="#bottompanel" id="bt_bottompanel"><i class="fas fa-bars"></i></a>
       
       <div id="searchContainer" style="display:none;">
