cleaning div_alert call

--- a/mobile/html/connection.html
+++ b/mobile/html/connection.html
@@ -28,7 +28,7 @@
           $('#div_twoFactorCode').show()
           return
         }
-        $('#div_alert').showAlert({message: error.message, level: 'danger'});
+        $.fn.showAlert({message: error.message, level: 'danger'});
       },
       success: function (data) {
         if ($('#cb_storeConnection').value() == 1) {
