--- a/mobile/modal/warnme.html
+++ b/mobile/modal/warnme.html
@@ -43,7 +43,7 @@
       test: test,
       cmd_id: $('#in_mdwarnme_cmd_id').value(),
       error: function(error) {
-        $('#div_alert').showAlert({message: error.message, level: 'danger'})
+        $.fn.showAlert({message: error.message, level: 'danger'})
       },
       success: function(messages) {
         $('#popupDialog').popup('close')
