--- a/mobile/html/history.html
+++ b/mobile/html/history.html
@@ -59,4 +59,5 @@
 
 <div id="div_graph" style="margin-top: 20px;height:calc(100% - 100px)"></div>
 
+<script src="core/php/getJS.php?file=desktop/common//js/ui.history.js"></script>
 <script src="core/php/getJS.php?file=mobile/js/history.js"></script>
