--- a/mobile/html/history.html
+++ b/mobile/html/history.html
@@ -57,6 +57,6 @@
   <div id="historyName"></div>
 </center>
 
-<div id="div_graph" style="margin-top: 20px;height:calc(100% - 100px)"></div>
+<div id="div_graph" class="chartContainer" style="margin-top: 20px;height:calc(100% - 100px)"></div>
 
 <script src="core/php/getJS.php?file=mobile/js/history.js"></script>
