--- a/mobile/html/index.html
+++ b/mobile/html/index.html
@@ -42,6 +42,7 @@
   <script src="core/php/getJS.php?file=core/js/cron.class.js"></script>
   <script src="core/php/getJS.php?file=core/js/plan3d.class.js"></script>
   <script src="core/php/getJS.php?file=core/js/log.class.js"></script>
+  <script src="core/php/getJS.php?file=core/js/note.class.js"></script>
   <script src="core/php/getJS.php?file=core/js/widgets.class.js"></script>
   <script src="core/php/getJS.php?file=core/js/timeline.class.js"></script>
   <script src="core/php/getJS.php?file=core/js/core.js"></script>
