add link to panel on overview

--- a/mobile/html/overview.html
+++ b/mobile/html/overview.html
@@ -1,3 +1,3 @@
+<div id="panelOverviewContainer"></div>
 <div id="objectOverviewContainer"></div>
-
 <script src="core/php/getJS.php?file=mobile/js/overview.js"></script>
