--- a/mobile/html/index.html
+++ b/mobile/html/index.html
@@ -26,6 +26,7 @@
   <script src="core/php/getJS.php?file=3rdparty/jquery.utils/jquery.utils.js"></script>
   <script src="core/php/getJS.php?file=3rdparty/jquery.packery/jquery.packery.js"></script>
   <script src="core/php/getJS.php?file=3rdparty/moment/moment-with-locales.min.js"></script>
+  <script src="core/php/getJS.php?file=core/dom/dom.utils.js"></script>
   <script src="core/php/getJS.php?file=core/js/jeedom.class.js"></script>
   <script src="core/php/getJS.php?file=core/js/private.class.js"></script>
   <script src="core/php/getJS.php?file=core/js/cmd.class.js"></script>
