mobile segmented timeline

--- a/mobile/html/timeline.html
+++ b/mobile/html/timeline.html
@@ -1,7 +1,10 @@
 <div class="col-lg-12">
   <div id="timelineContainer">
-    <ul>
+    <ul id="events">
     </ul>
+      <div id="timelineBottom" style="text-align: center; display: none;">
+        <a class="bt_loadMore ui-page-theme-a ui-btn" data-load="50"><i class="fas fa-plus-square"></i> 50</a>
+      </div>
   </div>
 </div>
 <script src="core/php/getJS.php?file=mobile/js/timeline.js"></script>
