--- a/mobile/html/index.html
+++ b/mobile/html/index.html
@@ -73,7 +73,7 @@
       <div id="summaryglobalContainer">
         <span class="objectSummaryglobal" data-version="mobile"></span>
       </div>
-      
+      <span id="bt_changeTheme" class="cursor" href="#"><i class="fas fa-adjust"></i></span>
       <span id="span_nbMessage" class="span_nbMessage cursor label-warning badge" style="display:none;"></span>
       <a href="#bottompanel" id="bt_bottompanel"><i class="fas fa-bars"></i></a>
       
